--- a/report-service/package.json
+++ b/report-service/package.json
@@ -1,8 +1,21 @@
 {
+  "name": "report-service",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon ./src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
-  }
+  },
+  "description": ""
 }
