--- a/sensor-service/package.json
+++ b/sensor-service/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "querystring": "^0.2.1"
   },
   "description": ""
 }
