--- a/sensor-service/.env
+++ b/sensor-service/.env
@@ -1,1 +1,7 @@
+MONGO_CONN=mongodb+srv://ra117306:bHADfgL7dKwArumk@sensor-data-cluster.gzihqki.mongodb.net/?retryWrites=true&w=majority
+HOSTNAME=localhost
 PORT=3000
+RABBITMQ_CONN=amqp://rabbitmq
+RABBITMQ_QNAME=readings_queue
+EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=eureka-discovery
+APP_ID=SENSOR_SERVICE
