--- a/sensor-service/package.json
+++ b/sensor-service/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
     "querystring": "^0.2.1"
