--- a/report-service/.env
+++ b/report-service/.env
@@ -1,5 +1,6 @@
 SENSOR_SERVICE=http://localhost:3000
 HOSTNAME=localhost
 PORT=3001
-RABBITMQ_CONN=amqp://rabbitmq
+RABBITMQ_CONN=amqp://localhost
 RABBITMQ_QNAME=readings_queue
+RABBITMQ_XNAME=readings_exchange
