--- a/sensor-service/.env
+++ b/sensor-service/.env
@@ -1,7 +1,6 @@
 MONGO_CONN=mongodb+srv://ra117306:bHADfgL7dKwArumk@sensor-data-cluster.gzihqki.mongodb.net/?retryWrites=true&w=majority
 HOSTNAME=localhost
 PORT=3000
-RABBITMQ_CONN=amqp://rabbitmq
+RABBITMQ_CONN=amqp://localhost
 RABBITMQ_QNAME=readings_queue
-EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=eureka-discovery
-APP_ID=SENSOR_SERVICE
+RABBITMQ_XNAME=readings_exchange
